<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/activity_step_detail_frame_layout"
android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/recipe_list" />

</FrameLayout>